Fix static code analysis issues.